--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { Menu, X, ChevronDown } from 'lucide-astro';
 import Button from '@components/ui/Button.astro';
 
 const ctaButton = {
-    name: 'Contact Us',
+    name: '联系我们',
     link: '/contact',
 };
 
