feat: 支持mdx博客内容收集与显示，修正astro.config.mjs配置

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -25,9 +25,9 @@ const getLogoClass = () => {
 <a href="/" class:list={['logo uppercase font-logo transition-colors duration-200 font-light', getLogoClass()]}>
     {
         // If image is the only element in this link, its alt attribute should be a textual representation.
-        // Please, use something like your company name or “Home”, not “logo.”
+        // Please, use something like your company name or "Home", not "logo.".
         // If there is link text, leave alt empty.
     }
     <Image src={logo} alt="" class="hidden" />
-    <span class="font-bold">Titan</span> Core
+    <span class="font-bold">AI PLATFORM</span>
 </a>
